// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader20 Loader should render image avatar properly 1`] = `
<div>
  <div
    class="sc-gsTCUz hdkynM"
  >
    <div
      class="sc-dlfnbm bIJBxZ"
    >
      <div
        class="sc-bdfBwQ iBlNGP"
      >
        <div
          class="multi-spinner"
        >
          <div
            class="multi-spinner"
          >
            <div
              class="multi-spinner"
            >
              <div
                class="multi-spinner"
              >
                <div
                  class="multi-spinner"
                >
                  <div
                    class="multi-spinner"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Loader20 Loader should render with all the props given 1`] = `
<div>
  <div
    class="sc-gsTCUz hdkynM"
  >
    <div
      class="sc-dlfnbm bIJBxZ"
    >
      <div
        class="sc-bdfBwQ bGYsGj"
      >
        <div
          class="multi-spinner"
        >
          <div
            class="multi-spinner"
          >
            <div
              class="multi-spinner"
            >
              <div
                class="multi-spinner"
              >
                <div
                  class="multi-spinner"
                >
                  <div
                    class="multi-spinner"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Loader20 Loader should render with default theme 1`] = `
<div>
  <div
    class="sc-gsTCUz hdkynM"
  >
    <div
      class="sc-dlfnbm bIJBxZ"
    >
      <div
        class="sc-bdfBwQ iZnijR"
      >
        <div
          class="multi-spinner"
        >
          <div
            class="multi-spinner"
          >
            <div
              class="multi-spinner"
            >
              <div
                class="multi-spinner"
              >
                <div
                  class="multi-spinner"
                >
                  <div
                    class="multi-spinner"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
